--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "performance-testing",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "format": "biome format --write *.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@biomejs/biome": "1.8.3"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.1652.0"
-  },
-  "trustedDependencies": [
-    "@biomejs/biome",
-    "aws-sdk"
-  ]
+	"name": "performance-testing",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"format": "biome format --write *"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@biomejs/biome": "1.8.3"
+	},
+	"dependencies": {
+		"@aws-sdk/client-ec2": "^3.606.0"
+	},
+	"trustedDependencies": ["@biomejs/biome", "aws-sdk"]
 }
